Fixed a few issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ a:hover {
 {
         -webkit-transform: scale(1.3);
         -ms-transform: scale(1.3);
-        transform: scale(1.3);
+        transform: scale(1.3) translate(69px);
 }
 
 nav a {
@@ -82,6 +82,7 @@ h2 {
 .headline {
     background-image: url(../images/bio_img2resize2.jpg);
    background-repeat: no-repeat;
+   background-position: center top;
     background-size: auto 125%;
     height: 45rem;
      
